--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -289,17 +289,16 @@ The utility of the proposed approach is demonstrated through experiments for joi
   arxiv={1905.10945},
   code={https://github.com/jongharyu/wyner-model},
   selected={true},
-  note={Submitted to <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>arXiv:1905.10945v2<br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
+  note={arXiv:1905.10945v2<br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
 }
 
 @misc{Shah--Shen--Ryu--Das--Sattigeri--Bu--Wornell2023,
   abbr={arXiv},
   title={Group Fairness with Uncertainty in Sensitive Attributes},
-  author={Shah, Abhin and Shen, Maohao and Ryu, Jongha Jon and Das, Subhro and Sattigeri, Prasanna and Bu, Yuheng and Wornell, Gregory W.},
+  author={Shah, Abhin and Shen, Maohao and Ryu, J. Jon and Das, Subhro and Sattigeri, Prasanna and Bu, Yuheng and Wornell, Gregory W.},
   archivePrefix={arXiv},
   eprint={2302.08077},
   primaryClass={cs.LG},
-  howpublished={Submitted; arXiv:2302.08077},
   arxiv={2302.08077},
   year={2023},
   author+an={3=highlight},
@@ -321,8 +320,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   author+an={1=highlight},
-  arxiv={https://arxiv.org/abs/2402.03655},
-  howpublished={arXiv:https://arxiv.org/abs/2402.03655},
+  arxiv={2402.03655},
   selected={true},
   poster={ml4phys2023-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
@@ -343,8 +341,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix={arXiv},
   primaryClass={stat.ME},
   author+an={1=highlight},
-  arxiv={https://arxiv.org/abs/2402.03683},
-  howpublished={arXiv:https://arxiv.org/abs/2402.03683},
+  arxiv={2402.03683},
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
@@ -353,18 +350,18 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   This paper specifically explores the use of the mixture portfolio, akin to Cover's universal portfolio, in the proposed framework and investigates the properties of the resulting CSs.
   Simulations demonstrate the tightness of these confidence sequences compared to existing methods.
   When applied to the sampling without-replacement setting for finite categorical data, it is shown that the resulting CS based on a universal gambling strategy is provably tighter than that of the posterior-prior ratio martingale proposed by Waudby-Smith and Ramdas.},
+  note={arXiv:2402.03683},
 }
 
 @misc{Ryu--Shen--Ghosh--Bu--Sattigerri--Wornell2024,
   abbr={arXiv},
   title={Improved Evidential Deep Learning via a Mixture of Dirichlet Distributions},
-  author={Ryu, J. Jon and Shen, Maohao and Ghosh, Soumya and Bu, Yuheng and Sattigeri, Prasanna and Das, Subhro and Wornell, Gregory W.},
+  author={Ryu*, J. Jon and Shen*, Maohao and Ghosh, Soumya and Bu, Yuheng and Sattigeri, Prasanna and Das, Subhro and Wornell, Gregory W.},
   year={2024},
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   author+an={1=highlight},
-  arxiv={https://arxiv.org/abs/2402.xxxxx},
-  howpublished={arXiv:https://arxiv.org/abs/2402.xxxxx},
+  arxiv={2402.xxxxx},
   selected={false},
   abstract={This paper explores a modern predictive uncertainty estimation approach, called evidential deep learning (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. 
   Despite their strong empirical performance, recent studies by Bengs et al. identify a fundamental pitfall of the existing methods: the learned epistemic uncertainty may not vanish even in the infinite-sample limit. 
@@ -374,6 +371,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   Afterward, a final meta distribution model distills the learned uncertainty from the target model. 
   Experimental results across various uncertainty-based downstream tasks demonstrate the superiority of our proposed method, and illustrate the practical implications arising from the consistency and inconsistency of learned epistemic uncertainty.
   },
+  note={arXiv:2402.xxxxx},
 }
 
 # unpublished technical reports
