--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -250,7 +250,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   author+an={1=highlight},
   arxiv={2202.02464},
   code={https://github.com/jongharyu/split-knn-rules},
-  selected={true},
+  selected={false},
   abstract={Recently, Qiao, Duan, and Cheng~(2019) proposed a distributed nearest-neighbor classification method, in which a massive dataset is split into smaller groups, each processed with a $k$-nearest-neighbor classifier, and the final class label is predicted by a majority vote among these groupwise class labels.
 This paper shows that the distributed algorithm with $k=1$ over a sufficiently large number of groups attains a minimax optimal error rate up to a multiplicative logarithmic factor under some regularity conditions, for both regression and classification problems.
 Roughly speaking, distributed 1-nearest-neighbor rules with $M$ groups has a performance comparable to standard $\Theta(M)$-nearest-neighbor rules.
