--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -361,7 +361,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   author+an={1=highlight},
-  arxiv={2402.xxxxx},
+  arxiv={2402.06160},
   selected={false},
   abstract={This paper explores a modern predictive uncertainty estimation approach, called evidential deep learning (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. 
   Despite their strong empirical performance, recent studies by Bengs et al. identify a fundamental pitfall of the existing methods: the learned epistemic uncertainty may not vanish even in the infinite-sample limit. 
@@ -371,7 +371,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   Afterward, a final meta distribution model distills the learned uncertainty from the target model. 
   Experimental results across various uncertainty-based downstream tasks demonstrate the superiority of our proposed method, and illustrate the practical implications arising from the consistency and inconsistency of learned epistemic uncertainty.
   },
-  note={arXiv:2402.xxxxx},
+  note={arXiv:2402.06160},
 }
 
 # unpublished technical reports
