--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -330,7 +330,7 @@ For high-dimensional eigenvalue problems, training neural networks to parameteri
 This paper proposes a new optimization framework based on the low-rank approximation characterization of a truncated singular value decomposition, accompanied by new techniques called nesting for learning the top-$L$ singular values and singular functions in the correct order.
 The proposed method promotes the desired orthogonality in the learned functions implicitly and efficiently via an unconstrained optimization formulation, which is easy to solve with off-the-shelf gradient-based optimization algorithms.
 We demonstrate the effectiveness of the proposed optimization framework for use cases in computational physics and machine learning.},
-  note={arXiv:2402.03655<br><a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> is to be presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
+  note={arXiv:2402.03655<br><a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> was presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
 }
 
 @misc{Ryu--Wornell2024,
