--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -292,15 +292,16 @@ The utility of the proposed approach is demonstrated through experiments for joi
   note={arXiv:1905.10945v2<br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
 }
 
-@misc{Shah--Shen--Ryu--Das--Sattigeri--Bu--Wornell2023,
-  abbr={arXiv},
+@inproceedings{Shah--Shen--Ryu--Das--Sattigeri--Bu--Wornell2023,
+  abbr={ISIT},
   title={Group Fairness with Uncertainty in Sensitive Attributes},
   author={Shah, Abhin and Shen, Maohao and Ryu, J. Jon and Das, Subhro and Sattigeri, Prasanna and Bu, Yuheng and Wornell, Gregory W.},
+  booktitle=isit,
   archivePrefix={arXiv},
   eprint={2302.08077},
   primaryClass={cs.LG},
   arxiv={2302.08077},
-  year={2023},
+  year={2024},
   author+an={3=highlight},
   note={arXiv:2302.08077<br><a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
   abstract={Learning a fair predictive model is crucial to mitigate biased decisions against minority groups in high-stakes applications.
