--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -313,11 +313,12 @@ The utility of the proposed approach is demonstrated through experiments for joi
   Our algorithm is applicable to both discrete and continuous sensitive attributes and is effective in real-world classification and regression tasks for various group fairness notions, e.g., independence and separation.},
 }
 
-@misc{Ryu--Xu--Erol--Bu--Zheng--Wornell2024,
-  abbr={arXiv},
+@inproceedings{Ryu--Xu--Erol--Bu--Zheng--Wornell2024,
+  abbr={ICML},
   title={Operator SVD with Neural Networks via Nested Low-Rank Approximation},
   author={Ryu, J. Jon and Xu, Xiangxiang and Erol, H. S. Melichan and Bu, Yuheng and Zheng, Lizhong and Wornell, Gregory W.},
   year={2024},
+  booktitle=icml,
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   author+an={1=highlight},
@@ -334,11 +335,12 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   note={arXiv:2402.03655<br><a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> was presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
 }
 
-@misc{Ryu--Wornell2024,
-  abbr={arXiv},
+@inproceedings{Ryu--Wornell2024,
+  abbr={ICML},
   title={Gambling-Based Confidence Sequences for Bounded Random Vectors},
   author={Ryu, J. Jon and Wornell, Gregory W.},
   year={2024},
+  booktitle=icml,
   archivePrefix={arXiv},
   primaryClass={stat.ME},
   author+an={1=highlight},
