--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -289,7 +289,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   arxiv={1905.10945},
   code={https://github.com/jongharyu/wyner-model},
   selected={true},
-  note={Under revision; ``Reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i>.<br>arXiv:1905.10945v2<br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
+  note={Under revision; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>arXiv:1905.10945v2<br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
 }
 
 @inproceedings{Shah--Shen--Ryu--Das--Sattigeri--Bu--Wornell2023,
