--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -207,6 +207,7 @@ By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjal
   primaryClass={cs.IT},
   author+an={1=equal;2=highlight,equal},
   arxiv={2202.02431},
+  html={https://proceedings.mlr.press/v206/bhatt23a.html},
   booktitle=aistats,
   abstract={A new portfolio selection strategy that adapts to a continuous side-information sequence is presented, with a universal wealth guarantee against a class of state-constant rebalanced portfolios with respect to a state function that maps each side-information symbol to a finite set of states.
 In particular, given that a state function belongs to a collection of functions of finite Natarajan dimension, the proposed strategy is shown to achieve, asymptotically to first order in the exponent, the same wealth as the best state-constant rebalanced portfolio with respect to the best state function, chosen in hindsight from observed market.
@@ -324,6 +325,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   author+an={1=highlight},
   arxiv={2402.03655},
   selected={true},
+  html={https://openreview.net/forum?id=qESG5HaaoJ},
   poster={ml4phys2023-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
@@ -345,6 +347,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   primaryClass={stat.ME},
   author+an={1=highlight},
   arxiv={2402.03683},
+  html={https://openreview.net/forum?id=mu7Er7f9NQ},
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
@@ -353,7 +356,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   This paper specifically explores the use of the mixture portfolio, akin to Cover's universal portfolio, in the proposed framework and investigates the properties of the resulting CSs.
   Simulations demonstrate the tightness of these confidence sequences compared to existing methods.
   When applied to the sampling without-replacement setting for finite categorical data, it is shown that the resulting CS based on a universal gambling strategy is provably tighter than that of the posterior-prior ratio martingale proposed by Waudby-Smith and Ramdas.},
-  note={arXiv:2402.03683},
+  note={Spotlight. arXiv:2402.03683},
 }
 
 @misc{Ryu--Shen--Ghosh--Bu--Sattigerri--Wornell2024,
