--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -229,13 +229,13 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
 }
 
 @phdthesis{Ryu2022,
+  abbr={PhD thesis},
   title={From Information Theory to Machine Learning Algorithms: A Few Vignettes},
   author={Ryu, Jongha Jon},
   year={2022},
   month={September},
-  school={University of California, San Diego},
+  school={University of California San Diego},
   html={https://escholarship.org/uc/item/5fc8x66w},
-  note={PhD thesis.},
   abstract={This dissertation illustrates how certain information-theoretic ideas and views on learning problems can lead to new algorithms via concrete examples.The three information-theoretic strategies taken in this dissertation are (1) to abstract out the gist of a learning problem in the infinite-sample limit; (2) to reduce a learning problem into a probability estimation problem and plugging-in a "good" probability; and (3) to adapt and apply relevant results from information theory. These are applied to three topics in machine learning, including representation learning, nearest-neighbor methods, and universal information processing, where two problems are studied from each topic.},
 }
 
@@ -304,7 +304,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   arxiv={2302.08077},
   year={2024},
   author+an={3=highlight},
-  note={arXiv:2302.08077<br><a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
+  note={<a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
   abstract={Learning a fair predictive model is crucial to mitigate biased decisions against minority groups in high-stakes applications.
   A common approach to learn such a model involves solving an optimization problem that maximizes the predictive power of the model under an appropriate group fairness constraint.
   However, in practice, sensitive attributes are often missing or noisy resulting in uncertainty.
@@ -319,6 +319,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   title={Operator SVD with Neural Networks via Nested Low-Rank Approximation},
   author={Ryu, J. Jon and Xu, Xiangxiang and Erol, H. S. Melichan and Bu, Yuheng and Zheng, Lizhong and Wornell, Gregory W.},
   year={2024},
+  month=jul,
   booktitle=icml,
   archivePrefix={arXiv},
   primaryClass={cs.LG},
@@ -334,7 +335,7 @@ For high-dimensional eigenvalue problems, training neural networks to parameteri
 This paper proposes a new optimization framework based on the low-rank approximation characterization of a truncated singular value decomposition, accompanied by new techniques called nesting for learning the top-$L$ singular values and singular functions in the correct order.
 The proposed method promotes the desired orthogonality in the learned functions implicitly and efficiently via an unconstrained optimization formulation, which is easy to solve with off-the-shelf gradient-based optimization algorithms.
 We demonstrate the effectiveness of the proposed optimization framework for use cases in computational physics and machine learning.},
-  note={arXiv:2402.03655<br><a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> was presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
+  note={<a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> was presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
 }
 
 @inproceedings{Ryu--Wornell2024,
@@ -343,6 +344,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author={Ryu, J. Jon and Wornell, Gregory W.},
   year={2024},
   booktitle=icml,
+  month=jul,
   archivePrefix={arXiv},
   primaryClass={stat.ME},
   author+an={1=highlight},
@@ -356,7 +358,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   This paper specifically explores the use of the mixture portfolio, akin to Cover's universal portfolio, in the proposed framework and investigates the properties of the resulting CSs.
   Simulations demonstrate the tightness of these confidence sequences compared to existing methods.
   When applied to the sampling without-replacement setting for finite categorical data, it is shown that the resulting CS based on a universal gambling strategy is provably tighter than that of the posterior-prior ratio martingale proposed by Waudby-Smith and Ramdas.},
-  note={Spotlight. arXiv:2402.03683},
+  note={Spotlight (top 3.5%)},
 }
 
 @misc{Ryu--Shen--Ghosh--Bu--Sattigerri--Wornell2024,
