--- a/_news/2024_05-01_icml.md
+++ b/_news/2024_05-01_icml.md
@@ -4,4 +4,4 @@ date: 2024-05-01 00:00:00-0000
 inline: true
 ---
 
-Two papers ([NeuralSVD](https://openreview.net/forum?id=qESG5HaaoJ) and [gambling-based confidence sequences](https://openreview.net/forum?id=mu7Er7f9NQ) (Spotlight)) accepted at ICML 2024!
+Two papers, [NeuralSVD](https://openreview.net/forum?id=qESG5HaaoJ) and [time-uniform confidence sets from universal gambling](https://openreview.net/forum?id=mu7Er7f9NQ) (Spotlight), accepted at ICML 2024!
