--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -381,6 +381,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   year={2024},
   author+an={2=highlight},
   selected={false},
+  note={An extended abstract will be presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
 }
 
 @unpublished{Ryu--Shah--Wornell2024,
