--- a/_news/2024_02_23_ita.md
+++ b/_news/2024_02_23_ita.md
@@ -4,4 +4,4 @@ date: 2024-02-23 00:00:00-0000
 inline: true
 ---
 
-I gave a talk on our recent work [NeuralSVD](https://arxiv.org/abs/2402.03655) at [ITA workshop](https://ita.ucsd.edu)!
+I gave a talk on our recent work [NeuralSVD](https://arxiv.org/abs/2402.03655) at [ITA workshop](https://ita.ucsd.edu).
