--- a/_news/2024_04-09_isit.md
+++ b/_news/2024_04-09_isit.md
@@ -4,4 +4,4 @@ date: 2024-04-09 00:00:00-0000
 inline: true
 ---
 
-[One paper](https://arxiv.org/abs/2302.08077) accepted at ISIT 2024!
+[One paper on learning with fairness under uncertainty](https://arxiv.org/abs/2302.08077) accepted at ISIT 2024!
