--- a/_news/2024_06-17_icml.md
+++ b/_news/2024_06-17_icml.md
@@ -4,4 +4,4 @@ date: 2024-06-17 00:00:00-0000
 inline: true
 ---
 
-One paper on new techniques for better score estimation accepted at <a href="https://spigmworkshop2024.github.io/">ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling</a>.
+[One paper](https://openreview.net/forum?id=zX27NDlfcu) on new techniques for better score estimation accepted at <a href="https://spigmworkshop2024.github.io/">ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling</a>.
