Minor fixes in about.md

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -131,7 +131,7 @@
 This paper revisits the gambling-based approach established in the recent literature from a natural \emph{two-horse race} perspective, and demonstrates new properties of the resulting algorithm induced by Cover (1991)'s universal portfolio.
 The main result of this paper is a new algorithm based on a mixture of lower bounds, which closely approximates the performance of Cover's universal portfolio with constant per-round time complexity.
 A higher-order generalization of a lower bound on a logarithmic function in (Fan et al., 2015), which is developed as a key technique for the proposed algorithm, may be of independent interest.},
-  note={To appear in <i>IEEE Trans. Inf. Theory</i>.},
+  note={To appear in <i>IEEE Trans. Inf. Theory</i> (2024+).},
 }
 
 % conference proceedings
@@ -383,7 +383,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   year={2024},
   author+an={2=highlight},
   selected={false},
-  note={An extended abstract will be presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
+  note={<a href="https://openreview.net/forum?id=5wdY7N5hNn">{An extended abstract}</a> will be presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
 }
 
 @unpublished{Ryu--Shah--Wornell2024,
