--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -131,7 +131,7 @@
 This paper revisits the gambling-based approach established in the recent literature from a natural \emph{two-horse race} perspective, and demonstrates new properties of the resulting algorithm induced by Cover (1991)'s universal portfolio.
 The main result of this paper is a new algorithm based on a mixture of lower bounds, which closely approximates the performance of Cover's universal portfolio with constant per-round time complexity.
 A higher-order generalization of a lower bound on a logarithmic function in (Fan et al., 2015), which is developed as a key technique for the proposed algorithm, may be of independent interest.},
-  note={To appear in <i>IEEE Trans. Inf. Theory</i> (2024+).},
+  note={To appear in <i>IEEE Trans. Inf. Theory</i>.},
 }
 
 % conference proceedings
@@ -293,7 +293,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   arxiv={2402.03655},
   selected={true},
   html={https://openreview.net/forum?id=qESG5HaaoJ},
-  poster={ml4phys2023-poster.pdf},
+  poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
 is a fundamental task in many machine learning and scientific computing problems.
@@ -318,6 +318,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   html={https://openreview.net/forum?id=mu7Er7f9NQ},
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
+  poster={icml2024-gambling-poster.pdf},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
   This paper proposes a new approach to constructing CSs for means of bounded multivariate stochastic processes using a general gambling framework, extending the recently established coin toss framework for bounded random processes.
   The proposed gambling framework provides a general recipe for constructing CSs for categorical and probability-vector-valued observations, as well as for general bounded multidimensional observations through a simple reduction.
